*SVN*

* Fixed redirects when the controller and action is named the same. Still haven't fixed same controller, module, and action, though #201 [Josh]

* Fixed problems with running multiple functional tests in Rails under 1.8.2 by including hack for test/unit weirdness

* Added thread-safety to the DRbStore #66, #389 [Ben Stiglitz]

* Added DateHelper#select_time and DateHelper#select_second #373 [Scott Baron]

* Added class declaration for the MissingFile exception #388 [Kent Sibilev]

* Added "short hypertext note with a hyperlink to the new URI(s)" to redirects to fulfill compliance with RFC 2616 (HTTP/1.1) section 10.3.3 #397 [Tim Bates]

* Added second boolean parameter to Base.redirect_to_url and Response#redirect to control whether the redirect is permanent or not (301 vs 302) #375 [Hodel]

* Fixed that @request.remote_ip didn't work in the test environment #369 [Bruno Mattarollo]

* Added :host and :protocol options to url_for and friends to redirect to another host and protocol than the current.


*1.1.0*

* Added search through session to clear out association caches at the end of each request. This makes it possible to place Active Record objects
  in the session without worrying about stale data in the associations (the main object is still subject to caching, naturally) #347 [Tobias Luetke]

* Added more informative exception when using helper :some_helper and the helper requires another file that fails, you'll get an
  error message tells you what file actually failed to load, rather than falling back on assuming it was the helper file itself #346 [dblack]

* Added use of *_before_type_cast for all input and text fields. This is helpful for getting "100,000" back on a integer-based 
  validation where the value would normally be "100".

* Added Request#port_string to get something like ":8080" back on 8080 and "" on 80 (or 443 with https).

* Added Request#domain (returns string) and Request#subdomains (returns array).
